--- a/src/app/paginator/paginator.component.html
+++ b/src/app/paginator/paginator.component.html
@@ -1,5 +1,18 @@
-<ul *ngIf="paginas?.length > 0">
-    <li *ngFor="let pagina of paginas">
-        {{pagina}}
+<ul *ngIf="paginas?.length > 0" class="pagination">
+    <li class="page-item" [ngClass]="paginador.first?'disabled page-item':'page-item'">
+        <a class="page-link" [routerLink]="['/clientes/page', 0]">&laquo;&laquo;</a>
+    </li>
+    <li class="page-item" *ngIf="paginador.number > 0">
+        <a class="page-link" [routerLink]="['/clientes/page', paginador.number-1]">&laquo;</a>
+    </li>
+    <li class="page-item" *ngFor="let pagina of paginas" [ngClass]="pagina-1 == paginador.number?'active':''"><!--active or disabled-->
+        <span class="page-link" *ngIf="pagina-1 == paginador.number">{{pagina}}</span>
+        <a class="page-link" *ngIf="pagina-1 != paginador.number" [routerLink]="['/clientes/page', pagina-1]">{{pagina}}</a>
+    </li>
+    <li class="page-item" *ngIf="paginador.number < paginador.totalPages-1">
+        <a class="page-link" [routerLink]="['/clientes/page', paginador.number + 1]">&raquo;</a>
+    </li>
+    <li class="page-item" [ngClass]="paginador.last?'disabled page-item':'page-item'">
+        <a class="page-link" [routerLink]="['/clientes/page', paginador.totalPages-1]">&raquo;&raquo;</a>
     </li>
 </ul>
