--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,5 @@ body{
 .wrap{
     padding-bottom: 30px;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
